--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-
 /* width */
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+@layer utilities {
+  .center {
+    @apply flex items-center justify-center;
   }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #f1f1f1; 
+  .soft {
+    @apply transition-all duration-300 ease-in-out;
   }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #888; 
+  .input {
+    @apply w-full p-3 border border-gray-300 rounded-lg focus:outline-none;
   }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
+}
