refactor authentication module and update local storage utility functions

--- a/src/App.css
+++ b/src/App.css
@@ -42,9 +42,9 @@ body {
     @apply w-full p-3 border border-gray-300 rounded-lg focus:outline-none;
   }
   .main-btn {
-    @apply px-8 py-3 bg-primary text-white  rounded-full focus:outline-none  border border-transparent;
+    @apply px-8 py-3 bg-primary text-white  rounded-full focus:outline-none text-center border border-transparent;
   }
   .second-btn {
-    @apply px-8 py-3 rounded-full border border-primary text-primary;
+    @apply px-8 py-3 rounded-full border border-primary text-primary text-center;
   }
 }
